--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background-color: #ebedef;
+
+}
+
+a{
+    text-decoration: none;
+
+}
+
+.card{
+    border: none;
+    transition: transform 0.2s;
+}
+
+.card-title{
+    text-align: center;
+}
+
+.card:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.navbar{
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.footer{
+    background-color: #f8f9fa;
+    border-top: 1px solid #dee2e6;
+}
