--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,6 @@
 
 <footer class="footer py-4 mt-5">
   <div class="container text-center">
-    <p>&copy; @2023 Zomato. All Rights Reserved.</p>
+    <p>&copy; 2023 Zomato. All Rights Reserved.</p>
   </div>
 </footer>
