--- a/src/app/pages/restaurent-items/restaurent-items.component.html
+++ b/src/app/pages/restaurent-items/restaurent-items.component.html
@@ -1,1 +1,22 @@
-<p>restaurent-items works!</p>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Zomato Items</h1>
+    <div class="row ">
+        <div class="col-4" *ngFor="let category of item.slice(0,8)">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-5">
+                            <img [src]="category.photoUrl" class="card-img-top" alt="Pav Bhaji">
+                        </div>
+                        <div class="col-7 text-end">
+                            <h6>{{category.menuItemName}}</h6>
+                            <h6>Price: ₹ {{category.price}}/-</h6>
+                            <p> {{category.restaurantName}}</p>
+                            <button class="btn btn-sm btn-success">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
