using  API's for login and orders

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<div class="main">
+    <div class="parent" >
+        <div class="items" *ngIf="logreg">
+            <form>
+                <div>
+                    <h4>Login</h4>
+                </div>
+                <div>
+                    <input name="userName" [(ngModel)]="loginObj.userName" type="text" placeholder="Enter Username">
+                </div>
+                <div>
+                    <input name="password" [(ngModel)]="loginObj.password" type="text" placeholder="Enter Password">
+                </div>
+                <div>
+                    <button class="button" (click)="onLogin()">Submit</button>
+                </div>
+                <div class="reg mx-3"><a (click)="registerClick()">Not Registered, Click here!!!</a></div>
+            </form>
+        </div>
+
+        <div class="items" *ngIf="!logreg">
+            <form>
+                <div>
+                    <h4>Register</h4>
+                </div>
+                <div>
+                    <input type="text" placeholder="Enter Username">
+                </div>
+                <div>
+                    <input type="text" placeholder="Enter Password">
+                </div>
+                <div>
+                    <button class="button">Submit</button>
+                </div>
+                <div class="reg mx-3"><a (click)="loginClick()">Already Registered, Click here!!!</a></div>
+            </form>
+        </div>
+
+    </div>
+</div>
