--- a/src/app/pages/restaurent-items/restaurent-items.component.html
+++ b/src/app/pages/restaurent-items/restaurent-items.component.html
@@ -12,11 +12,35 @@
                             <h6>{{category.menuItemName}}</h6>
                             <h6>Price: ₹ {{category.price}}/-</h6>
                             <p> {{category.restaurantName}}</p>
-                            <button class="btn btn-sm btn-success">Add</button>
+                            <button class="btn btn-sm btn-success" (click)="openQtyModal(category)">Add</button>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Modal Heading</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="closeQtyModal()"></button>
+            </div>
+
+            <div class="modal-body">
+                <input type="text" class="form-control" [(ngModel)]="quantity" placeholder="Enter Quantity">
+            </div>
+            <div class="modal-body">
+                <input type="text" class="form-control" [(ngModel)]="address" placeholder="Enter Address">
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="placeOrder()">Add item</button>
+            </div>
+
         </div>
     </div>
 </div>
